--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,55 @@
 body {
   background-color: lightgrey;
 }
+
+.conditions-panel {
+  height: 512px;
+  padding: 0px;
+  background-color: black;
+}
+
+
+.conditions-header {
+  height: 64px;
+  background-color: white;
+  color: black;
+  text-align: center;
+  padding: 16px;
+  margin: -1px;
+}
+
+.condition-list {
+  background-color: black;
+  color: white;
+  margin: -1px;
+  padding-left: 20px;
+  width: 100%;
+}
+
+.condition-list:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
+
+.page-select {
+  width: 40%;
+  background-color: black;
+  color: white;
+  border-style: solid;
+  border-color: white;
+}
+
+.page-select:hover {
+  background-color: white;
+  color: black;
+}
+
+#pagecount {
+  width: 20%;
+  color: white
+}
+
+#conditions-results {
+  height: 388px;
+}
