--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,20 @@ body {
   overflow: scroll;
 }
 
-#doctor-img {
+.doctor-img {
   width: 100%;
   height: auto;
   border-style: solid;
   border-width: 4px;
   border-color: rgb(70,70,70);
+}
+
+#name-search {
+  width: 100%;
+  height: auto;
+}
+
+.error {
+  color: red;
+  text-align: center;
 }
